# streamlit-llm

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
.streamlit/: secrets.toml.sample
docs/: installed-packages.md  parser.md  portry-command.md  prompt-tips.md  python.md
docs/setup/: init-poetry-on-venv.md  setup-virtual-env.md
llmModels/ollama/: README.md
pages/: default-sns-summary.py  dynamic-prompt.py  dynamic_prompt.py  email_bot.py  introduce.py  local_RAG.py  mlti_turn.py  multi_modal.py  pdf-based-qa.py  pdf_based_qa.py  private_email_bot.py
pages/prompts/en/: data-analysis-V02.yaml
pages/prompts/kr/: general.yaml  rag-reference.yaml
prompts/dynamic-prompts/en/: prompt-maker.yaml
prompts/dynamic-prompts/kr/: sns.yaml
prompts/en/: rag.yaml
prompts/kr/: email.yaml  summary.yaml  translate.yaml
prompts/samples/en/: data-analysis-V01.yaml  pdf-rag-xionic.yaml  pdf-rag.yaml
prompts/samples/kr/: rag-table.yaml
utils/: langsmith_config.py  models.py  prompt_loader.py  retriever.py
